<resources>
    <string name="app_name">Time Machine</string>
    <string name="dul"> Past  ---->  Present </string>
    <string name="sek">Present  ----> Future</string>
    <string name="dl"> Interval Time</string>
    <string name="mes">Time Machine</string>
    <string name="e">Exit</string>
    <string name="he">Help</string>
    <string name="peng">Time Calculator</string>
    <string name="title_activity_mundur">Mundur</string>
    <string name="kini">Present</string>
    <string name="Msdpn">Future</string>
    <string name="ed1">Date</string>
    <string name="ed2">Months</string>
    <string name="ed3">Years</string>
    <string name="mun">To The Past</string>
    <string name="mulai">Result</string>
    <string name="hit">Calculate</string>
    <string name="title_activity_maju">To The Future</string>
    <string name="ed">Back</string>
    <string name="ex">Exit</string>
    <string name="lam">Past</string>
    <string name="hri">Days</string>
    <string name="waw">Initial Time</string>
    <string name="wak">Final Time</string>
    <string name="nul">For Age Calculation\nFill In The Blank Columns Past With Birtday</string>
    <string name="refres">Refresh</string>
    <string name="title_activity_future">Future</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_judur">judur</string>
    <string name="setara">Equal To</string>
    <string name="title_activity_penghitung">penghitung</string>
    <string name="selisih">Interval Time</string>
    <string name="minggu">Weeks</string>
    <string name="nol">0</string>
    <string name="gratisbaner">ca-app-pub-3940256099942544/6300978111</string>
    <string name="gratisintert">ca-app-pub-3940256099942544/1033173712</string>
    <string name="idaplikasi">ca-app-pub-9560479013051071~6919702773</string>
    <string name="idunitiklan">ca-app-pub-9560479013051071/4498371809</string>
    <string name="inter">ca-app-pub-9560479013051071/4692994682</string>
    <string name="dey">Day</string>
    <string name="Mont">Month</string>
    <string name="yea">Year</string>
</resources>
