<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".MainActivity">


    <ScrollView
        android:id="@+id/s"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/anim">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <Button
                android:id="@+id/lm"
                android:layout_width="match_parent"
                android:layout_marginStart="45dp"
                android:layout_marginEnd="45dp"
                android:layout_height="60dp"
                android:textSize="15sp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="270dp"
                android:background="@drawable/tbl"
                android:text="@string/dl" />


            <Button
                android:id="@+id/button2"
                android:layout_width="match_parent"
                android:layout_marginStart="120dp"
                android:layout_marginEnd="120dp"
                android:textSize="15sp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="725dp"
                android:layout_marginBottom="5dp"
                android:background="@drawable/tb2"
                android:text="@string/e" />

            <Button
                android:id="@+id/button3"
                android:layout_width="match_parent"
                android:layout_marginStart="45dp"
                android:layout_marginEnd="45dp"
                android:layout_height="60dp"
                android:textSize="15sp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="90dp"
                android:layout_marginBottom="100dp"
                android:background="@drawable/tb2"
                android:text="@string/sek" />

            <Button
                android:id="@+id/penghitung"
                android:layout_width="match_parent"
                android:layout_marginStart="60dp"
                android:layout_marginEnd="60dp"
                android:textSize="15sp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="360dp"
                android:background="@drawable/tb2"
                android:text="@string/peng" />

            <Button
                android:id="@+id/ls"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginStart="45dp"
                android:textSize="15sp"
                android:layout_marginEnd="45dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="180dp"
                android:background="@drawable/tb4"
                android:text="@string/dul" />
<!--
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="120dp"
                android:textSize="15sp"
                android:layout_marginEnd="120dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="440dp"
                android:background="@drawable/tbl"
                android:text="@string/he" />
            -->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="260dp"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="85dp"
                android:background="@drawable/tb3" />

            <CalendarView
                android:layout_width="match_parent"
                android:layout_height="400dp"
                android:animateLayoutChanges="true"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="415dp" />

            <com.google.android.gms.ads.AdView
                android:id="@+id/adBanner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                ads:adSize="BANNER"
                ads:adUnitId="@string/idunitiklan">
            </com.google.android.gms.ads.AdView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#ffff"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="45dp"
                android:text="@string/mes"
                android:textSize="30sp">

            </TextView>

        </FrameLayout>
    </ScrollView>

</LinearLayout>