<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    app:layout_behavior="@string/appbar_scrolling_view_behavior" >

    <LinearLayout
        android:id="@+id/ani"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/anim2"
        android:orientation="vertical">

        <com.google.android.gms.ads.AdView
            xmlns:ads="http://schemas.android.com/apk/res-auto"
            android:id="@+id/adBanner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            ads:adSize="BANNER"
            ads:adUnitId="@string/idunitiklan">
        </com.google.android.gms.ads.AdView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/sek"
            android:layout_gravity="center_horizontal"
            android:textSize="20sp"
            android:textColor="@color/atu" >
        </TextView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="220dp"
            android:baselineAligned="false"
            android:gravity="center"
            android:background="@drawable/tb3"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:orientation="horizontal" >

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:layout_weight="1"
                android:background="@drawable/tb2"
                android:orientation="vertical" >
                <TextView
                    android:id="@+id/kn"
                    android:textColor="#fff"
                    android:layout_width="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:layout_marginBottom="15dp"
                    android:text="@string/kini" />
                <TextView
                    android:id="@+id/hariawal"
                    android:textSize="20sp"
                    android:textColor="#141414"
                    android:layout_marginBottom="10dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <EditText
                    android:id="@+id/ed1"
                    android:hint="@string/ed1"
                    android:inputType="number"
                    android:textSize="25sp"
                    android:gravity="center_horizontal"
                    android:background="@drawable/tb1"
                    android:layout_marginBottom="5dp"
                    android:layout_width="100dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_height="wrap_content" >
                </EditText>
                <EditText
                    android:id="@+id/ed2"
                    android:hint="@string/ed2"
                    android:inputType="number"
                    android:textSize="25sp"
                    android:gravity="center_horizontal"
                    android:background="@drawable/tb1"
                    android:layout_marginBottom="5dp"
                    android:layout_width="100dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_height="wrap_content" >
                </EditText>
                <EditText
                    android:id="@+id/ed3"
                    android:hint="@string/ed3"
                    android:inputType="number"
                    android:textSize="25sp"
                    android:gravity="center_horizontal"
                    android:background="@drawable/tb1"
                    android:layout_marginBottom="10dp"
                    android:layout_width="100dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_height="wrap_content" >
                </EditText>
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:background="@drawable/tbl"
                android:orientation="vertical" >
                <TextView
                    android:id="@+id/nt"
                    android:textStyle="bold"
                    android:textColor="#fff"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="15dp"
                    android:layout_width="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:text="@string/Msdpn" />
                <TextView
                    android:id="@+id/hariakhir"
                    android:textSize="20sp"
                    android:textColor="#141414"
                    android:layout_marginBottom="10dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <EditText
                    android:id="@+id/d1"
                    android:hint="@string/ed1"
                    android:inputType="number"
                    android:textSize="25sp"
                    android:gravity="center_horizontal"
                    android:background="@drawable/tb1"
                    android:layout_marginBottom="5dp"
                    android:layout_width="100dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_height="wrap_content" >
                </EditText>
                <EditText
                    android:id="@+id/d2"
                    android:hint="@string/Mont"
                    android:inputType="number"
                    android:textSize="25sp"
                    android:gravity="center_horizontal"
                    android:background="@drawable/tb1"
                    android:layout_marginBottom="5dp"
                    android:layout_width="100dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_height="wrap_content" >
                </EditText>
                <EditText
                    android:id="@+id/d3"
                    android:hint="@string/yea"
                    android:inputType="number"
                    android:textSize="25sp"
                    android:gravity="center_horizontal"
                    android:background="@drawable/tb1"
                    android:layout_marginBottom="10dp"
                    android:layout_width="100dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_height="wrap_content" >
                </EditText>
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/tb3"
            android:layout_gravity="center_horizontal"
            android:orientation="horizontal" >
            <Button
                android:id="@+id/tbl2"
                android:background="@drawable/tb4"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:text="@string/hit"
                android:layout_marginTop="15dp"
                android:layout_marginStart="20dp"
                android:layout_marginBottom="15dp" >
            </Button>
            <Button
                android:id="@+id/ref"
                android:background="@drawable/tb4"
                android:layout_marginStart="40dp"
                android:layout_marginEnd="30dp"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:text="@string/refres"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="15dp" >
            </Button>
        </LinearLayout>

        <TextView
            android:id="@+id/tbl1"
            android:layout_width="200dp"
            android:textColor="#141414"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal"
            android:text="@string/mulai"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="5dp" >
        </TextView>
        <LinearLayout
            android:layout_width="match_parent"
            android:gravity="center_horizontal"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:background="@drawable/tb1"
            android:orientation="horizontal"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/e3"
                android:textSize="30sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp" >
            </TextView>
            <TextView
                android:layout_width="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:layout_height="wrap_content"
                android:text="@string/ed3" >
            </TextView>
            <TextView
                android:id="@+id/e2"
                android:textSize="30sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp" >
            </TextView>
            <TextView
                android:layout_width="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:layout_height="wrap_content"
                android:text="@string/ed2" >
            </TextView>
            <TextView
                android:id="@+id/e1"
                android:textSize="30sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="30dp" >
            </TextView>
            <TextView
                android:layout_width="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginStart="10dp"
                android:layout_height="wrap_content"
                android:text="@string/hri" >
            </TextView>
        </LinearLayout>
        <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
        android:textSize="20sp"
        android:layout_gravity="center_horizontal"
        android:text="@string/setara">
    </TextView>
        <LinearLayout
            android:layout_width="match_parent"
            android:gravity="center_horizontal"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:background="@drawable/tb1"
            android:layout_marginBottom="20dp"
            android:orientation="horizontal"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/hari"
                android:textSize="30sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp" >
            </TextView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginStart="10dp"
                android:layout_height="wrap_content"
                android:text="@string/hri" >
            </TextView>
        </LinearLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:layout_gravity="center_horizontal"
            android:text="@string/setara">
        </TextView>
        <LinearLayout
            android:layout_width="match_parent"
            android:gravity="center_horizontal"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:background="@drawable/tb1"
            android:layout_marginBottom="20dp"
            android:orientation="horizontal"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/mg"
                android:textSize="30sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp" >
            </TextView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginStart="10dp"
                android:layout_height="wrap_content"
                android:text="@string/minggu" >
            </TextView>

            <TextView
                android:id="@+id/m1"
                android:textSize="30sp"
                android:layout_marginStart="30dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="30dp" >
            </TextView>
            <TextView
                android:layout_width="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginStart="10dp"
                android:layout_height="wrap_content"
                android:text="@string/hri" >
            </TextView>
        </LinearLayout>


     <!--   <TextView
            android:id="@+id/tbl1"
            android:layout_width="200dp"
            android:textColor="#141414"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal"
            android:text="@string/mulai"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="5dp" >
        </TextView>
        <LinearLayout
            android:layout_width="match_parent"
            android:gravity="center_horizontal"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:background="@drawable/tb1"
            android:orientation="horizontal"
            android:layout_marginBottom="120dp"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/e3"
                android:textSize="30sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp" >
            </TextView>
            <TextView
                android:layout_width="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:layout_height="wrap_content"
                android:text="@string/ed3" >
            </TextView>
            <TextView
                android:id="@+id/e2"
                android:textSize="30sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp" >
            </TextView>
            <TextView
                android:layout_width="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:layout_height="wrap_content"
                android:text="@string/ed2" >
            </TextView>
            <TextView
                android:id="@+id/e1"
                android:textSize="30sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="30dp" >
            </TextView>
            <TextView
                android:layout_width="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginStart="10dp"
                android:layout_height="wrap_content"
                android:text="@string/hri" >
            </TextView>
        </LinearLayout> -->

    </LinearLayout>



</androidx.core.widget.NestedScrollView>